[package]
name = "tailgaters"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
color-eyre = "0.6.3"
crossbeam = "0.8.4"
crossterm = "0.28.1"
env_logger = "0.11.7"
log = "0.4.26"
ratatui = "0.29.0"
regex = "1.11.1"
serialport = "4.7.0"
tui-logger = "0.15.0"
